...
                      child: Padding(
                        padding: const EdgeInsets.only(left: 14),
                        child: Row(
                          mainAxisAlignment: MainAxisAlignment.center,
                          children: [
                            FactoryButton(
                              label: 'Factory 1',
                              icon: Icons.factory,
                              isSelected: selectedFactory == 1,
                              onTap: () {
                                setState(() {
                                  selectedFactory = 1;
                                  widget.onFactorySelected(1);
                                });
                              },
                            ),
                            FactoryButton(
                              label: 'Factory 2',
                              icon: Icons.factory,
                              isSelected: selectedFactory == 2,
                              onTap: () {
                                setState(() {
                                  selectedFactory = 2;
                                  widget.onFactorySelected(2);
...
