...
                                                    .size
                                                    .width *
                                                0.5,
                                            height: 50,
                                            child: TextField(
                                              key: const Key(
                                                  'phone_number_input_field'),
                                              keyboardType: TextInputType.phone,
                                              style: const TextStyle(
                                                fontSize: 18.0,
                                              ),
                                              decoration: InputDecoration(
                                                contentPadding:
...
